Update README.md
Added configuration instructions